--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to Snod Trivia!</h1>
+  <h1>Welcome to Snoddy's Trivia!</h1>
   <p>This is our hub for questions, scores, and bragging rights.</p>
   <nav>
     <a href="scores.html">See Scores</a>
