--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <title>Family Trivia Game</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <h1>Welcome to Snoddy's Trivia!</h1>
+  <h1 class="text-3xl font-bold text-center text-blue-600 mt-8">
+  Snoddy's Family Trivia
+</h1>
   <p>This is our hub for questions, scores, and bragging rights.</p>
   <nav>
     <a href="scores.html">See Scores</a>
