--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Snodgrass Family Trivia</title>
+  <title>Snod Trivia</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans min-h-screen flex flex-col items-center">
-  <header class="bg-blue-600 text-white w-full py-4 shadow-md">
-    <h1 class="text-2xl font-bold text-center">Snodgrass Family Trivia</h1>
+  <header class="bg-emerald-700 text-white w-full py-4 shadow-md">
+    <h1 class="text-2xl font-bold text-center">Snod Trivia</h1>
   </header>
 
   <main class="flex-grow w-full max-w-3xl mt-6 px-4">
     <section class="bg-white p-6 rounded-xl shadow-md mb-8">
-      <h2 class="text-xl font-semibold text-blue-600 mb-2">📬 Current Round</h2>
+      <h2 class="text-xl font-semibold text-emerald-600 mb-2">📬 Current Round</h2>
       <p class="text-gray-700 mb-4">These are the questions currently out in the mail:</p>
       <ul class="list-disc list-inside space-y-1">
         <li>Who sang the 1984 hit "Time After Time"?</li>
@@ -23,7 +23,7 @@
     </section>
 
     <section class="bg-white p-6 rounded-xl shadow-md">
-      <h2 class="text-xl font-semibold text-blue-600 mb-2">🏆 Previous Rounds</h2>
+      <h2 class="text-xl font-semibold text-emerald-600 mb-2">🏆 Previous Rounds</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
         <div class="border rounded-lg p-4 hover:bg-gray-50 transition">
           <h3 class="font-bold text-lg">Round 1 – Music</h3>
@@ -39,8 +39,8 @@
     </section>
   </main>
 
-  <footer class="bg-blue-600 text-white w-full text-center py-3 mt-8">
-    <p class="text-sm">© 2025 Snodgrass Family Trivia</p>
+  <footer class="bg-emerald-700 text-white w-full text-center py-3 mt-8">
+    <p class="text-sm">© 2025 Snod Trivia</p>
   </footer>
 </body>
 </html>
