--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans min-h-screen flex flex-col items-center">
-  <header class="bg-emerald-700 text-white w-full py-4 shadow-md">
-    <h1 class="text-2xl font-bold text-center">Snod Trivia</h1>
+  <header class="bg-emerald-700 text-white w-full py-2 shadow-md">
+    <h1 class="flex justify-center items-center py-0">
+      <img src="assets/logos/Logo.png" alt="Snod Trivia" class="h-16 w-auto" />
+    </h1>
+
   </header>
 
   <main class="flex-grow w-full max-w-3xl mt-6 px-4">
