--- a/index.html
+++ b/index.html
@@ -17,27 +17,46 @@
   <main class="flex-grow w-full max-w-3xl mt-6 px-4">
     <section class="bg-white p-6 rounded-xl shadow-md mb-8">
       <h2 class="text-xl font-semibold text-emerald-600 mb-2">📬 Current Round</h2>
-      <p class="text-gray-700 mb-4">These are the questions currently out in the mail:</p>
-      <ul class="list-disc list-inside space-y-1">
-        <li>Who sang the 1984 hit "Time After Time"?</li>
-        <li>What is the largest ocean on Earth?</li>
-        <li>Which planet is known as the Red Planet?</li>
-      </ul>
+      <p class="text-gray-700 mb-4">Tap below to view this month’s trivia:</p>
+<!-- start of collapsable on the map element -->
+  <details class="border rounded-lg mb-4">
+    <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
+      On The Map
+    </summary>
+    <div class="p-4 flex justify-center">
+      <img src="assets/questions/nov25/OnTheMap.png"
+          alt="November 2025 Trivia"
+          class="w-full max-w-md rounded-lg shadow-md">
+    </div>
+  </details>
+<!-- end of collapsable element -->
+<!-- start of collapsable storefront element -->
+  <details class="border rounded-lg">
+    <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
+      Storefronts
+    </summary>
+    <div class="p-4 flex justify-center">
+      <img src="assets/questions/nov25/Storefronts.png"
+          alt="November 2025 Trivia"
+          class="w-full max-w-md rounded-lg shadow-md">
+    </div>
+  </details>
     </section>
-
+<!-- end of collapsable element -->
+    </section>
     <section class="bg-white p-6 rounded-xl shadow-md">
       <h2 class="text-xl font-semibold text-emerald-600 mb-2">🏆 Previous Rounds</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
         <div class="border rounded-lg p-4 hover:bg-gray-50 transition">
-          <h3 class="font-bold text-lg">Round 1 – Music</h3>
-          <p class="text-sm text-gray-500 mb-2">Jan 2025</p>
-          <p>Jack: 8/10<br>Sarah: 7/10</p>
+          <h3 class="font-bold text-lg">November 2025</h3>
+          <p class="text-sm text-gray-500 mb-2">On The Map <br> Storefronts</p>
+          <p>Check back soon for updates!</p>
         </div>
-        <div class="border rounded-lg p-4 hover:bg-gray-50 transition">
+        <!-- <div class="border rounded-lg p-4 hover:bg-gray-50 transition">
           <h3 class="font-bold text-lg">Round 2 – General</h3>
           <p class="text-sm text-gray-500 mb-2">Feb 2025</p>
           <p>Jack: 9/10<br>Sarah: 10/10</p>
-        </div>
+        </div> -->
       </div>
     </section>
   </main>
