--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- <div class="border rounded-lg p-4 hover:bg-gray-50 transition">
           <h3 class="font-bold text-lg">Round 2 – General</h3>
           <p class="text-sm text-gray-500 mb-2">Feb 2025</p>
-          <p>Jack: 9/10<br>Sarah: 10/10</p>
+          <p>scores go here</p>
         </div> -->
       </div>
     </section>
