Nov25 scores updated and Dec 25 questions added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body class="bg-gray-100 text-gray-800 font-sans min-h-screen flex flex-col items-center">
   <header class="bg-emerald-700 text-white w-full py-2 shadow-md">
     <h1 class="flex justify-center items-center py-0">
-      <img src="assets/logos/Logo.png" alt="Snod Trivia" class="h-16 w-auto" />
+      <a href="index.html">
+        <img src="assets/logos/Logo.png" alt="Snod Trivia" class="h-16 w-auto cursor-pointer" />
+      </a>
     </h1>
 
   </header>
@@ -21,11 +23,11 @@
 <!-- start of collapsable on the map element -->
   <details class="border rounded-lg mb-4">
     <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
-      On The Map
+      Faces
     </summary>
     <div class="p-4 flex justify-center">
-      <img src="assets/questions/nov25/OnTheMap.png"
-          alt="November 2025 Trivia"
+      <img src="assets/questions/dec25/faces.png"
+          alt="December 2025 Trivia"
           class="w-full max-w-md rounded-lg shadow-md">
     </div>
   </details>
@@ -33,11 +35,11 @@
 <!-- start of collapsable storefront element -->
   <details class="border rounded-lg">
     <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
-      Storefronts
+      Mascots
     </summary>
     <div class="p-4 flex justify-center">
-      <img src="assets/questions/nov25/Storefronts.png"
-          alt="November 2025 Trivia"
+      <img src="assets/questions/dec25/mascots.png"
+          alt="December 2025 Trivia"
           class="w-full max-w-md rounded-lg shadow-md">
     </div>
   </details>
@@ -49,8 +51,8 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
         <div class="border rounded-lg p-4 hover:bg-gray-50 transition">
           <h3 class="font-bold text-lg">November 2025</h3>
-          <p class="text-sm text-gray-500 mb-2">On The Map <br> Storefronts</p>
-          <p>Check back soon for updates!</p>
+          <p class="text-sm text-black-500 mb-2">👑 1st — Mike & Linda</p>
+          <a href="nov25.html" class="text-blue-600 underline">View results →</a>
         </div>
         <!-- <div class="border rounded-lg p-4 hover:bg-gray-50 transition">
           <h3 class="font-bold text-lg">Round 2 – General</h3>
