--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
       <h2 class="text-xl font-semibold text-emerald-600 mb-2">🏆 Previous Rounds</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
         <div class="border rounded-lg p-4 hover:bg-gray-50 transition">
+          <h3 class="font-bold text-lg">December 2025</h3>
+          <p class="text-sm text-black-500 mb-2">👑 1st — Maggie & Joel</p>
+          <a href="dec25.html" class="text-blue-600 underline">View results →</a>
+        </div><div class="border rounded-lg p-4 hover:bg-gray-50 transition">
           <h3 class="font-bold text-lg">November 2025</h3>
           <p class="text-sm text-black-500 mb-2">👑 1st — Mike & Linda</p>
           <a href="nov25.html" class="text-blue-600 underline">View results →</a>
