finalizing dec25 results

--- a/dec25.html
+++ b/dec25.html
@@ -37,8 +37,8 @@
         Faces — Answers
       </summary>
       <div class="p-4 flex justify-center">
-       <!-- <img src="assets/answers/dec25/faces.png"
-             class="w-full max-w-md rounded-lg shadow-md"> -->
+       <img src="assets/answers/dec25/faces.png"
+             class="w-full max-w-md rounded-lg shadow-md">
       </div>
     </details>
 
@@ -47,8 +47,8 @@
         Cereal — Answers
       </summary>
       <div class="p-4 flex justify-center">
-        <!--<img src="assets/answers/dec25/cereal.png"
-             class="w-full max-w-md rounded-lg shadow-md">-->
+        <img src="assets/answers/dec25/cereal.png"
+             class="w-full max-w-md rounded-lg shadow-md">
       </div>
     </details>
 
@@ -58,7 +58,7 @@
 
       <div class="space-y-2">
         <p class="flex items-center gap-2 text-xl font-bold text-yellow-600">
-          👑 1st — Maggie & Joel (40)
+          👑 1st — Maggie & Joel (42)
         </p>
         <p class="flex items-center gap-2 text-lg font-semibold text-gray-700">
           🥈 2nd — Vulich Family (38)
@@ -71,6 +71,9 @@
         </p>
         <p class="flex items-center gap-2 text-lg font-semibold text-gray-700">
           🥉 3rd — Mollie & friends (36)
+        </p>
+        <p class="flex items-center gap-2 text-lg font-semibold text-gray-700">
+          Kevin & Allie (35)
         </p>
         <p class="flex items-center gap-2 text-lg font-semibold text-gray-700">
           Colleen & Derek (34)
@@ -97,6 +100,9 @@
           Amy & Adam (29)
         </p>
         <p class="flex items-center gap-2 text-lg font-semibold text-gray-700">
+          Connor & Indré (25)
+        </p>
+        <p class="flex items-center gap-2 text-lg font-semibold text-gray-700">
           David Snodgrass (25)
         </p>
         <p class="flex items-center gap-2 text-lg font-semibold text-gray-700">
@@ -111,46 +117,229 @@
     <!-- Submissions -->
     <h3 class="text-lg font-semibold mt-8 mb-4">Team Submissions</h3>
 
-    <!-- Mike & Linda (1st) -->
-    <!-- <details class="border rounded-lg mb-4">
+    <!-- If you're reading this please forgive my lack of variables and scripts...  -->
+
+    <!-- 1st place -->
+    <details class="border rounded-lg mb-4">
       <summary class="cursor-pointer px-4 py-2 bg-yellow-50 hover:bg-yellow-100 font-medium text-yellow-700">
-        👑 Mike & Linda (17)
+        👑 1st — Maggie & Joel (42)
       </summary>
       <div class="p-4 flex flex-col items-center gap-4">
-        <img src="assets/results/nov25/mnlMap.jpeg"
+        <img src="assets/results/dec25/mnjcereal.jpeg"
              class="w-full max-w-md rounded-lg shadow">
-        <img src="assets/results/nov25/mnlStorefronts.jpeg"
+        <img src="assets/results/dec25/mnjfaces.jpeg"
              class="w-full max-w-md rounded-lg shadow">
       </div>
-    </details> -->
+    </details>
 
-    <!-- Matt & Cheese (2nd) -->
-    <!-- <details class="border rounded-lg mb-4">
+    <!-- 2nd place -->
+    <details class="border rounded-lg mb-4">
       <summary class="cursor-pointer px-4 py-2 bg-gray-100 hover:bg-gray-200 font-medium text-gray-700">
-        🥈 Matt & Cheese (16)
+        🥈 2nd — Vulich Family (38)
       </summary>
       <div class="p-4 flex flex-col items-center gap-4">
-        <img src="assets/results/nov25/mattCheeseMap.jpeg"
+        <img src="assets/results/dec25/vulichcereal.jpeg"
              class="w-full max-w-md rounded-lg shadow">
-        <img src="assets/results/nov25/mattCheeseStorefronts.jpeg"
+        <img src="assets/results/dec25/vulichfaces.jpeg"
              class="w-full max-w-md rounded-lg shadow">
       </div>
-    </details> -->
+    </details>
 
-    <!-- Amy & Adam (3rd) -->
-    <!-- <details class="border rounded-lg mb-4">
+    <!-- 3rd place -->
+    <details class="border rounded-lg mb-4">
       <summary class="cursor-pointer px-4 py-2 bg-orange-50 hover:bg-orange-100 font-medium text-orange-700">
-        🥈 Amy & Adam (16)
+        🥉 3rd — Mike & Linda (36)
       </summary>
       <div class="p-4 flex flex-col items-center gap-4">
-        <img src="assets/results/nov25/kenesMap.jpeg"
+        <img src="assets/results/dec25/mnlcereal.jpeg"
              class="w-full max-w-md rounded-lg shadow">
-        <img src="assets/results/nov25/kenesStorefronts.jpeg"
+        <img src="assets/results/dec25/mnlfaces.jpeg"
              class="w-full max-w-md rounded-lg shadow">
       </div>
-    </details> -->
+    </details>
 
-  </section>
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 bg-orange-50 hover:bg-orange-100 font-medium text-orange-700">
+        🥉 3rd — Jeff & Laurie (36)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/jnlcereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/jnlfaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+
+  <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 bg-orange-50 hover:bg-orange-100 font-medium text-orange-700">
+        🥉 3rd — Mollie & friends (36)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/molcereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/molfaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        Kevin & Allie (35)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/knacereal.JPG"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/knafaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        Colleen & Derek (34)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/cndcereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/cndfaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+  
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        Ann Snodgrass (34)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/anncereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/annfaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+  
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        Rob & Sarah (32)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/rnscereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/rnsfaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+  
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        Patti (31)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/patticereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/pattifaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+  
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        Mary & Rick (31)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/markscereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/marksfaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+  
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        Matt & Cheese (30)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/mnacereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/mnafaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+  
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        Kathie & Dave (29)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/kndcereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/kndfaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+  
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        Amy & Adam (29)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/anacereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/anafaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+  
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        Connor & Indré (25)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <!-- <img src="assets/results/dec25/knacereal.JPG"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/knafaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow"> -->
+      </div>
+    </details>
+  
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        David Snodgrass (25)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/udcereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/UDfaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+  
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        Jackie and Sofie (23)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/jackiecereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/jackiefaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+  
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        Maggie Ziem (23)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/mzcereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/mzfaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+  
+
+</section>
 
 </main>
 
