--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
   <main class="flex-grow w-full max-w-3xl mt-6 px-4">
     <section class="bg-white p-6 rounded-xl shadow-md mb-8">
       <h2 class="text-xl font-semibold text-emerald-600 mb-2">📬 Current Round</h2>
-      <p class="text-gray-700 mb-4">Tap below to view this month’s trivia:</p>
-<!-- start of collapsable on the map element -->
-  <details class="border rounded-lg mb-4">
+      <p class="text-gray-700 mb-4">January 2025 questions coming soon. Stay tuned!</p>
+
+      <!-- start of collapsable element 1 -->
+  <!-- <details class="border rounded-lg mb-4">
     <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
       Faces
     </summary>
@@ -30,10 +31,11 @@
           alt="December 2025 Trivia"
           class="w-full max-w-md rounded-lg shadow-md">
     </div>
-  </details>
+  </details> -->
 <!-- end of collapsable element -->
-<!-- start of collapsable storefront element -->
-  <details class="border rounded-lg">
+
+<!-- start of collapsable element 2 -->
+  <!-- <details class="border rounded-lg">
     <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
       Mascots
     </summary>
@@ -43,8 +45,9 @@
           class="w-full max-w-md rounded-lg shadow-md">
     </div>
   </details>
-    </section>
+    </section> -->
 <!-- end of collapsable element -->
+
     </section>
     <section class="bg-white p-6 rounded-xl shadow-md">
       <h2 class="text-xl font-semibold text-emerald-600 mb-2">🏆 Previous Rounds</h2>
