update jan 25 questions. begin work on template for future months

--- a/dec25.html
+++ b/dec25.html
@@ -73,13 +73,13 @@
           🥉 3rd — Mollie & friends (36)
         </p>
         <p class="flex items-center gap-2 text-lg font-semibold text-gray-700">
+          🥉 3rd — Ann Snodgrass (36)
+        </p>
+        <p class="flex items-center gap-2 text-lg font-semibold text-gray-700">
           Kevin & Allie (35)
         </p>
         <p class="flex items-center gap-2 text-lg font-semibold text-gray-700">
           Colleen & Derek (34)
-        </p>
-        <p class="flex items-center gap-2 text-lg font-semibold text-gray-700">
-          Ann Snodgrass (34)
         </p>
         <p class="flex items-center gap-2 text-lg font-semibold text-gray-700">
           Rob & Sarah (32)
@@ -184,6 +184,18 @@
 
     <details class="border rounded-lg mb-4">
       <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
+        🥉 Ann Snodgrass (36)
+      </summary>
+      <div class="p-4 flex flex-col items-center gap-4">
+        <img src="assets/results/dec25/anncereal.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+        <img src="assets/results/dec25/annfaces.jpeg"
+             class="w-full max-w-md rounded-lg shadow">
+      </div>
+    </details>
+  
+    <details class="border rounded-lg mb-4">
+      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
         Kevin & Allie (35)
       </summary>
       <div class="p-4 flex flex-col items-center gap-4">
@@ -202,18 +214,6 @@
         <img src="assets/results/dec25/cndcereal.jpeg"
              class="w-full max-w-md rounded-lg shadow">
         <img src="assets/results/dec25/cndfaces.jpeg"
-             class="w-full max-w-md rounded-lg shadow">
-      </div>
-    </details>
-  
-    <details class="border rounded-lg mb-4">
-      <summary class="cursor-pointer px-4 py-2 hover:bg-gray-100 text-black-700">
-        Ann Snodgrass (34)
-      </summary>
-      <div class="p-4 flex flex-col items-center gap-4">
-        <img src="assets/results/dec25/anncereal.jpeg"
-             class="w-full max-w-md rounded-lg shadow">
-        <img src="assets/results/dec25/annfaces.jpeg"
              class="w-full max-w-md rounded-lg shadow">
       </div>
     </details>
