--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
   <main class="flex-grow w-full max-w-3xl mt-6 px-4">
     <section class="bg-white p-6 rounded-xl shadow-md mb-8">
       <h2 class="text-xl font-semibold text-emerald-600 mb-2">📬 Current Round</h2>
-      <p class="text-gray-700 mb-4">January 2025 questions coming soon. Stay tuned!</p>
+      <p class="text-gray-700 mb-4">January 2026 questions are in the mail. Please return by January 20.</p>
 
       <!-- start of collapsable element 1 -->
-  <!-- <details class="border rounded-lg mb-4">
+  <details class="border rounded-lg mb-4">
     <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
-      Faces
+      Brands
     </summary>
     <div class="p-4 flex justify-center">
-      <img src="assets/questions/dec25/faces.png"
-          alt="December 2025 Trivia"
-          class="w-full max-w-md rounded-lg shadow-md">
-    </div>
-  </details> -->
-<!-- end of collapsable element -->
-
-<!-- start of collapsable element 2 -->
-  <!-- <details class="border rounded-lg">
-    <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
-      Mascots
-    </summary>
-    <div class="p-4 flex justify-center">
-      <img src="assets/questions/dec25/mascots.png"
-          alt="December 2025 Trivia"
+      <img src="assets/questions/jan26/brands.png"
+          alt="January 2026 Trivia"
           class="w-full max-w-md rounded-lg shadow-md">
     </div>
   </details>
-    </section> -->
+<!-- end of collapsable element -->
+
+<!-- start of collapsable element 2 -->
+  <details class="border rounded-lg">
+    <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
+      Icons
+    </summary>
+    <div class="p-4 flex justify-center">
+      <img src="assets/questions/jan26/icons.png"
+          alt="January 2026 Trivia"
+          class="w-full max-w-md rounded-lg shadow-md">
+    </div>
+  </details>
+    </section>
 <!-- end of collapsable element -->
 
     </section>
