Jan 26 score update

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <main class="flex-grow w-full max-w-3xl mt-6 px-4">
     <section class="bg-white p-6 rounded-xl shadow-md mb-8">
       <h2 class="text-xl font-semibold text-emerald-600 mb-2">📬 Current Round</h2>
-      <p class="text-gray-700 mb-4">January 2026 questions are in the mail. Please return by January 20.</p>
+      <p class="text-gray-700 mb-4">Check back soon for February questions!</p>
 
       <!-- start of collapsable element 1 -->
-  <details class="border rounded-lg mb-4">
+  <!-- <details class="border rounded-lg mb-4">
     <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
       Brands
     </summary>
@@ -31,11 +31,11 @@
           alt="January 2026 Trivia"
           class="w-full max-w-md rounded-lg shadow-md">
     </div>
-  </details>
+  </details> -->
 <!-- end of collapsable element -->
 
 <!-- start of collapsable element 2 -->
-  <details class="border rounded-lg">
+  <!-- <details class="border rounded-lg">
     <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
       Icons
     </summary>
@@ -45,13 +45,18 @@
           class="w-full max-w-md rounded-lg shadow-md">
     </div>
   </details>
-    </section>
+    </section> -->
 <!-- end of collapsable element -->
 
     </section>
     <section class="bg-white p-6 rounded-xl shadow-md">
       <h2 class="text-xl font-semibold text-emerald-600 mb-2">🏆 Previous Rounds</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+        <div class="border rounded-lg p-4 hover:bg-gray-50 transition">
+          <h3 class="font-bold text-lg">January 2026</h3>
+          <p class="text-sm text-black-500 mb-2">👑 1st — Matt & Allie</p>
+          <a href="jan26.html" class="text-blue-600 underline">View results →</a>
+        </div>
         <div class="border rounded-lg p-4 hover:bg-gray-50 transition">
           <h3 class="font-bold text-lg">December 2025</h3>
           <p class="text-sm text-black-500 mb-2">👑 1st — Maggie & Joel</p>
