--- a/jan26.html
+++ b/jan26.html
@@ -25,7 +25,7 @@
   <main class="flex-grow w-full max-w-3xl mt-6 px-4">
 
   <section class="bg-white p-6 rounded-xl shadow-md mb-8">
-    <h2 class="text-xl font-semibold text-emerald-600 mb-4">🏆 December 2025 — Scores</h2>
+    <h2 class="text-xl font-semibold text-emerald-600 mb-4">🏆 January 2026 — Scores</h2>
 
     <p class="text-gray-700 mb-4">
       Below are the official questions, team submissions, and final rankings. Answers will be posted soon, once all entries are received.
@@ -34,20 +34,20 @@
     <!-- Question Images -->
     <details class="border rounded-lg mb-4">
       <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
-        Faces — Answers
+        Apps — Answers
       </summary>
       <div class="p-4 flex justify-center">
-       <img src="assets/answers/dec25/faces.png"
+       <img src="assets/answers/jan26/apps.jpeg"
              class="w-full max-w-md rounded-lg shadow-md">
       </div>
     </details>
 
     <details class="border rounded-lg mb-4">
       <summary class="cursor-pointer px-4 py-2 bg-blue-50 hover:bg-blue-100 font-medium">
-        Cereal — Answers
+        Brands — Answers
       </summary>
       <div class="p-4 flex justify-center">
-        <img src="assets/answers/dec25/cereal.png"
+        <img src="assets/answers/jan26/brands.jpeg"
              class="w-full max-w-md rounded-lg shadow-md">
       </div>
     </details>
