--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
   </header>
 
   <main class="flex-grow w-full max-w-3xl mt-6 px-4">
+
+     <!-- Submission Banner -->
+      <div class="w-full max-w-3xl mb-4 px-4">
+        <div class="bg-yellow-50 border border-yellow-200 text-yellow-800 rounded-lg p-4 text-sm">
+        <span class="font-semibold">Submissions close Sunday February 28th!</span>
+        </div>
+      </div>
+      
     <section class="bg-white p-6 rounded-xl shadow-md mb-8">
       <h2 class="text-xl font-semibold text-emerald-600 mb-2">📬 Current Round</h2>
       <p class="text-gray-700 mb-4">Check your mail soon for February questions!</p>
@@ -45,12 +53,20 @@
           class="w-full max-w-md rounded-lg shadow-md">
     </div>
   </details>
+
+  <!-- submission button -->
+  <div class="mt-6 flex justify-center">
+  <a href="submit.html"
+     class="bg-emerald-600 hover:bg-emerald-700 text-white px-6 py-3 rounded-lg font-semibold shadow-md">
+    Submit Your Answers
+  </a>
+  </div>
     </section>
 <!-- end of collapsable element -->
 
     </section>
     <section class="bg-white p-6 rounded-xl shadow-md">
-      <h2 class="text-xl font-semibold text-emerald-600 mb-2">🏆 Previous Rounds</h2>
+      <h2 class="text-xl font-semibold text-emerald-600 mb-2">Previous Rounds</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
         <div class="border rounded-lg p-4 hover:bg-gray-50 transition">
           <h3 class="font-bold text-lg">January 2026</h3>
