--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </main>
 
   <footer class="bg-emerald-700 text-white w-full text-center py-3 mt-8">
-    <p class="text-sm">© 2025 Snod Trivia</p>
+    <p class="text-sm">© 2026 Snod Trivia — <a href="signup.html" class="underline">Sign up to receive future rounds</a></p>
   </footer>
 </body>
 </html>
