--- a/thanks.html
+++ b/thanks.html
@@ -24,8 +24,7 @@
       </h2>
 
       <p class="text-gray-700 mb-6">
-        Thanks for submitting your trivia answers.<br>
-        We will update the site with your scores shortly!
+        Thank you for your submission.<br>
       </p>
 
       <a href="index.html"
