update file upload

--- a/submit.html
+++ b/submit.html
@@ -55,9 +55,6 @@
             </label>
         </p>
 
-        <!-- Netlify hidden input -->
-        <input type="hidden" name="form-name" value="trivia-submission">
-
         <!-- Hidden month tag -->
         <input type="hidden" name="round" value="January 2026">
 
@@ -95,7 +92,7 @@
           </label>
           <input
             type="file"
-            name="photo 1"
+            name="sheet1"
             required
             accept="image/jpeg,image/png,image/jpg"
             class="w-full"
@@ -111,7 +108,7 @@
           </label>
           <input
             type="file"
-            name="photo 2"
+            name="sheet2"
             required
             accept="image/jpeg,image/png,image/jpg"
             class="w-full"
